# MCP-AI-Agents

./: .gitignore  README.md
MCP-AI-Agent-Blender/: .gitignore  LLM_Server_OV.py  MCP_Assistant.py  README.md  local_assistant_with_mcp_prompts.py  local_mcp_server_with_llm.py
MCP-AI-Agent-Blender/src/: __init__.py  server.py
MCP-AI-Agent-Stock-Market/: .env.example  .gitignore  1_stock_price_server.py  2_company_info_server.py  3_LLM_inference_server.py  3_LLM_inference_server_OV.py  README.md  Stock_Market_MCP_Assistant.py  TRANSFORMATION_SUMMARY.md  client.py  pyproject.toml  run_all.py  setup.bat  test_improvements.py
MCP-AI-Agent-Weather/: .gitignore  1_weather_server.py  2_Air_Quality_Index_server.py  3_LLM_inference_server.py  3_LLM_inference_server_OV.py  README.md  Weather_AQI_MCP_Assistant.py  pyproject.toml
